[package]
name = "irb"
version = "0.1.0"
authors = ["Pete Gadomski <pete.gadomski@gmail.com>"]
publish = false

[dependencies]
clap = { version = "2.26", features = ["yaml"], optional = true }
irbacs-sys = { git = "https://github.com/gadomski/irbacs-sys", optional = true }
quick-error = "1.2"

[dev-dependencies]
approx = "0.1"

[[bin]]
name = "irb"
doc = false
required-features = ["clap", "irbacs-sys"]
